# loan_agents

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
lender_guidelines/: README.md  anchor_loans_fix_flip.md  guidelines_index.json  kiavi_brrrr.md  kiavi_dscr.md  lendingone_dscr.md  lima_one_dscr.md  lima_one_fix_flip.md  new_silver_fix_flip.md  roc_capital_brrrr.md  roc_capital_dscr.md
loan_officer/: README.md  __init__.py  arive_create_lead.py  arive_create_loan.py  arive_zapier.py  document_collector.py  lender_partners.py  lender_router.py  loan_app_invitation.py  prequal.py  prequal_letter.py  routes.py  system_prompt.md  workflows.py
loan_officer/intake/: __init__.py  chatbot.py  completeness.py  ocr_classifier.py  routes.py  statement_liquidity.py  upload.py
loan_officer/tests/: conftest.py  test_workflow.py  (+13 more)
loan_processor/: README.md  __init__.py  condition_generator.py  credit_memo.py  guideline_engine.py  pre_underwriting.py  routes.py  system_prompt.md
ops/: deploy_render.md  run_local.sh  seed_data.py
shared/: __init__.py  auth.py  browserbase.py  config.py  db.py  deal_flow_client.py  llm.py  net.py  s3_client.py  schemas.py  tranchi_client.py  webhooks.py  zapier_mcp.py
tx_coordinator/: README.md  __init__.py  agent.py  arive_actions.py  communication_hub.py  deadline_engine.py  document_vault.py  guardrails.py  inbound.py  notifications.py  parties.py  pdf_intake.py  routes.py  sweeper.py  system_prompt.md  timeline.py
(+32 files in other folders)
