[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "loan_agents"
version = "0.1.0"
description = "AI Loan Officer + Loan Processor for Tranchi.ai"
requires-python = ">=3.11"
authors = [{ name = "Marc Munoz", email = "marc@munoz.ltd" }]
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "anthropic>=0.40",
    "openai>=1.58",
    "requests>=2.32",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["loan_officer/tests", "loan_officer/typeform/tests", "loan_processor/tests", "shared/tests", "tx_coordinator/tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
